# solana-yellowstone-stream-processor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LOGBOOK.md  MOTIVATION.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  cli.rs  config.rs  error.rs  http.rs  main.rs  metrics.rs  telemetry.rs
crates/app/tests/: cli.rs
crates/domain/: Cargo.toml
crates/domain/src/: decoded.rs  event.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: api.rs  cursor.rs  lib.rs  postgres.rs  slots.rs  swaps.rs
crates/stream/: Cargo.toml
crates/stream/src/: batcher.rs  lib.rs  pipeline.rs  replay.rs  slot_state.rs  source.rs  yellowstone.rs  yellowstone_live.rs
crates/stream/tests/: gap_replay.rs  replay_pipeline.rs  swap_decoding.rs
docs/: README.md  api.md  architecture.md  benchmarks.md  configuration.md  domain-decoding.md  event-identity.md  finalized-reconciliation.md  live-recovery.md  provider-compatibility.md  provider-matrix.md  reliability.md
fixtures/: sample_stream.jsonl
migrations/: 0001_init.sql  0002_swaps.sql
tests/integration/: replay_pipeline.rs
