[package]
name = "solana-yellowstone-stream-processor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
solana-yellowstone-domain = { path = "../domain" }
solana-yellowstone-storage = { path = "../storage" }
solana-yellowstone-stream = { path = "../stream" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true
