[package]
name = "solana-yellowstone-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait = "0.1"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "migrate", "macros"] }
solana-yellowstone-domain = { path = "../domain" }
tracing = "0.1"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
