[package]
name = "solana-yellowstone-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde_json = "1"
solana-yellowstone-domain = { path = "../domain" }
solana-yellowstone-storage = { path = "../storage" }

[lints]
workspace = true
