[package]
name = "solana-yellowstone-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde_json = "1"
solana-yellowstone-domain = { path = "../domain" }
tokio = { version = "1", features = ["rt", "sync"] }
solana-yellowstone-storage = { path = "../storage" }

[lints]
workspace = true

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }
